2009/04/17	kwsPlus release 1.7
	
	58. Create nodes with node factory in ChppVisRdmBuilder.
	57. Distribute headers in subdirectories.
	56. Install doxytag file in ${datadir}/doc/kwsPlus/html directory.
	
2009/02/03	kwsPlus release 1.6
	
	55. Generate unitTesting/Makefile.in even without --enable-unitTesting
	54. Removed using namespace commands in headers.
	
2008/09/08	kwsPlus release 1.5

	53. Define macro FLIC_HUGE_VAL.
	52. Using the addNode() of roadmap builder instead of roadmap itself.
	51. CflicDistance::distance() now returns 1e6 instead of HUGE_VAL when 
	    direct path does not exist.
	50. Change dependency in unitTesting (testKwsDirectPath -> testKineoWorks).
	49. Fix Typo in documentation.
	48. Remove useless method CflicDirectPath::init.
	47. Modification in class CkwsPlusDPLinear.
	46. Make access functions to velocity const
	45. Correction of a bug in copy of CkwsPlusDirectPath.
	44. Added computation of velocity along CflicDirectPath direct path.
	43. In hppVisRdmBuilder::buildOneStep, if shooter fails, return KD_ERROR.
	42. Fixed a bug in copy constructor of CflicDirectPath.
	41. Fix some bugs in Local Trees.
	40. Added node and edge classes with additionnal informations.
	39. Added template builder and shooter that sends additionnal
	    notifications.
	38. Implemented a roadmap builder delegate to interrupt a
	    roadmap builder during path planning.
	
2008/06/12	kwsPlus release 1.4.1
	
	37. UnitTesting is now compiled on demand configure --enable-unitTesting.
	36. Added diffusion shooter factory.
	35. Added diffusion node picker factory.
	
2008/05/13	kwsPlus release 1.4
	
	34. Added distance function factory.
        33. Added some debugging code in flicDistance.cpp and flicDistance.h.
        32. Corrected some warning and removed useless KWSPRECOND() in
            flicDirectPath.cpp.
        31. Adaptation to KPP version 2.04.500.

2008/04/24      kwsPlus release 1.3.2

        36. Fix more memory leaks in flicDistance.
