@@ -5,6 +5,8 @@
 # Author: Florent Lamiraux
 #
 
+ACLOCAL_AMFLAGS = -I build-aux
+
 SUBDIRS = \
 	src 	\
 	doc	\
