@@ -5,6 +5,8 @@
 # Author: Florent Lamiraux
 #
 
+include $(top_srcdir)/build-aux/init.mk
+
 lib_LTLIBRARIES = libkwsPlus.la
 libkwsPlus_la_SOURCES = \
 	flicDirectPath.cpp \
@@ -30,11 +32,11 @@ libkwsPlus_la_SOURCES = \
 	kwsPlusStopRdmBuilderDelegate.cpp 
 
 
-libkwsPlus_la_CPPFLAGS = -I$(srcdir)/../include $(KWSIO_CFLAGS)  $(LAPACK_CFLAGS)
+libkwsPlus_la_CPPFLAGS = $(AM_CPPFLAGS) $(KWSIO_CFLAGS)  $(LAPACK_CFLAGS)
 libkwsPlus_la_LDFLAGS =\
 	$(KWSIO_LIBS) 	\
 	$(LAPACK_LIBS)  \
 	-release ${PACKAGE_VERSION}
 
-EXTRA_DIST = \
+EXTRA_DIST += \
 	flicManager.h
